# PortsServer

./: .gitignore  .gitmodules  Api.cpp  Api.h  CMakeLists.txt  Model.cpp  Model.h  PortsServerApi_Testing.postman_collection.json  README.md  SerialApi.cpp  SerialApi.h  SerialPort.cpp  SerialPort.h  ServerApi.raml  TestPort.cpp  TestPort.h  Utils.ixx  View.cpp  View.h  main.cpp  main.h
NwJsApp/: nwjs_index.js.in
NwJsApp/actual/package.nw/: index.js  package.json
PortApi/: PortApi.cpp  PortApi.h  SerialPort.cpp  SerialPort.h  SerialPortApi.cpp  SerialPortApi.h  TestPort.cpp  TestPort.h
html/: configurations.html  index.html  style.css
libs/: inja.hpp
